<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background2">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ViewFlipper
                    android:id="@+id/vp_PosterMostPopular"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:contentDescription="@string/poster_movie_most_popular"
                    android:scaleType="fitXY"
                    android:autoStart="true"
                    android:flipInterval="3000"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/pulp_fiction" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_gradient_bottom"
                    app:layout_constraintBottom_toBottomOf="@+id/vp_PosterMostPopular"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_mostPopular"
                    style="@style/TextTitle"
                    android:text="@string/most_popular"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/vp_PosterMostPopular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_mostPopular"
                    style="@style/RecyclerViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_mostPopular"
                    tools:listitem="@layout/list_item_layout" />

                <TextView
                    android:id="@+id/tv_rated"
                    style="@style/TextTitle"
                    android:text="@string/top_rated"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_mostPopular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_rated"
                    style="@style/RecyclerViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rated"
                    tools:listitem="@layout/list_item_layout" />

                <TextView
                    android:id="@+id/tv_today"
                    style="@style/TextTitle"
                    android:text="@string/top_10_today"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_rated"
                    app:layout_constraintBottom_toTopOf="@+id/rv_today"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_today"
                    style="@style/RecyclerViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_today"
                    tools:listitem="@layout/list_item_layout" />

                <TextView
                    android:id="@+id/tv_classic"
                    style="@style/TextTitle"
                    android:text="@string/classics"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_today" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_classic"
                    style="@style/RecyclerViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_classic"
                    tools:listitem="@layout/list_item_layout" />

                <ProgressBar
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/progressbar"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>
